# models/user_model.go
@@ -8,7 +8,7 @@ type UserModel struct {
 	MODEL
 	NickName       string           `gorm:"size:36" json:"nick_name"`                                                              //昵称
 	UserName       string           `gorm:"size36" json:"user_name"`                                                               //用户名
-	Password       string           `gorm:"size:128" json:"password"`                                                              //密码
+	Password       string           `gorm:"size:128" json:"-"`                                                                     //密码
 	Avatar         string           `gorm:"size:246" json:"avatar"`                                                                //头像id
 	Email          string           `gorm:"size:128" json:"email"`                                                                 //邮箱
 	Tel            string           `gorm:"size:18" json:"tel"`                                                                    //手机
