# routers/user_router.go
@@ -9,5 +9,6 @@ func LoginRouter(router *gin.RouterGroup) {
 
 	loginApi := api.ApiGroupApp.LoginApi
 	router.POST("/email_login", loginApi.EmailLoginView)
+	router.GET("/users", loginApi.UserListView)
 
 }
